--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -149,6 +149,7 @@ body {
 
 .paragraph {
     font-size: $default-font-size;
+    letter-spacing: 3px;
 
     @media only screen and (max-width: $bp-medium-small) {
         font-size: 1.5rem;
